# weekly-report-p

./: README.md  article.md  build_graph.py  captions.sbv  cli.py  evaluator.py  generator.py  git_loader.py  langgraph_youtube_script.md  main.py  multi_evaluator.py  pyproject.toml  requirements.txt  state.py
report/: weekly-report-2026_01_18_09-51.md  weekly-report-2026_01_18_10-27.md
